Table users as U {
  id uuid [pk]
  full_name varchar [not null]
  email varchar [not null, unique]
  hashed_password varchar [not null]
  is_verified boolean [not null, default: false]
  password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamptz [not null, default: `now()`]
}

Table families as F {
  id uuid [pk]
  name varchar [not null]
  owner_id uuid [ref: > U.id, not null, unique]
  created_at timestamptz [not null, default: `now()`]
}

Table permissions as P {
  id uuid [pk, ref: > U.id]
  family_id uuid [ref: > F.id, not null]
  can_read boolean [not null, default: true]
  can_edit boolean [not null, default: true]
  can_create boolean [not null, default: false]
  can_modify boolean [not null, default: false]
}

Table tasks as T {
  id uuid [pk]
  name varchar [not null]
  description varchar [not null, default: ""]
  done boolean [not null, default: false]
  family_id uuid [ref: > F.id, not null]
  created_by uuid [ref: > U.id, not null]
  assigned_to uuid [ref: > U.id, default: null]
  execution_date timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table recipes {
  id uuid [pk]
  created_by uuid [not null, ref: > U.id]
  public boolean [not null, default: false]
  title varchar [not null]
  description varchar [not null]
  iframe_link varchar [not null, default: ""]
  image_link varchar [not null, default: ""]
  created_at timestamptz [not null, default: `now()`]
}

Table sessions {
  id uuid [pk]
  user_id uuid [ref: > U.id, not null]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked boolean [not null, default: false]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table verify_emails {
  id uuid [pk]
  user_id uuid [ref: > U.id, not null]
  email varchar [not null]
  secret_code varchar [not null]
  is_used boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  expired_at timestamptz [not null]
}
